# spotify-lyrics-api-rust

./: Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.yml
src/: config.rs  main.rs  spotify.rs  spotifyexception.rs
