[package]
name = "spotifylyricsapi"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
base32 = "0.4"
sha1 = "0.10"
tempfile = "3.8"
url = "2.4"
hmac = "0.12"
actix-web = "4.4"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"
dirs = "5.0"
